# photo_manager

./: .gitignore  CMakeLists.txt  eog
scripts/: search
src/: gui.cpp  gui.h  main.cpp  md5sum.cpp  md5sum.h  photo_database.cpp  photo_database.h
